--- a/_posts/0000-01-02-lilxma.md
+++ b/_posts/0000-01-02-lilxma.md
@@ -2,5 +2,8 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+As Kanye West said:
+
+> I miss the old Kanye
+> straight from the Go Kanye
 Use the left arrow to go back!
